--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Patternfly Analytics</title>
-  <meta id="appName" name="application-name" content="Patternfly Analytics">
+  <title>PatternFly Metrics</title>
+  <meta id="appName" name="application-name" content="PatternFly Metrics">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
   <base href="/">
